--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "sass": "^1.57.1",
-    "husky": "^8.0.0"
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-xo": "^0.43.1",
+    "husky": "^8.0.0",
+    "sass": "^1.57.1"
   },
   "prettier": {
     "singleQuote": true
