--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eslint-config-xo": "^0.43.1",
     "husky": "^8.0.0",
     "jest": "^29.4.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "singleQuote": true
